# Henley-Royal-Regatta-Schedule

./: .gitignore  README.md  henley_scheduler.py  main.py  pyproject.toml  requirements.txt  setup.py  trohpy_boat_pair.json
.github/workflows/: daily_schedule_update.yml
HenleySchedule/: __main__.py  henley_scheduler.py
HenleySchedule/static/: trohpy_boat_pair.json  trohpy_boat_pair.yaml
data/: 2025-07-05.html  2025-07-06.html
