[project]
name = "henley-royal-regatta-schedule"
version = "0.1.0"
description = "Henley Royal Regatta Schedule CLI" 
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
]
